--- a/AutomaticWateringSystem.ioc
+++ b/AutomaticWateringSystem.ioc
@@ -26,12 +26,13 @@ Mcu.Name=STM32L152RETx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PA14
-Mcu.Pin11=PB8
-Mcu.Pin12=PB9
-Mcu.Pin13=VP_RTC_VS_RTC_Activate
-Mcu.Pin14=VP_RTC_VS_RTC_WakeUp_intern
-Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin10=PA13
+Mcu.Pin11=PA14
+Mcu.Pin12=PB8
+Mcu.Pin13=PB9
+Mcu.Pin14=VP_RTC_VS_RTC_Activate
+Mcu.Pin15=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin16=VP_SYS_VS_Systick
 Mcu.Pin2=PH0-OSC_IN
 Mcu.Pin3=PH1-OSC_OUT
 Mcu.Pin4=PA2
@@ -39,8 +40,8 @@ Mcu.Pin5=PA3
 Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
-Mcu.Pin9=PA13
-Mcu.PinsNb=16
+Mcu.Pin9=PC6
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L152RETx
@@ -48,6 +49,7 @@ MxCube.Version=6.8.0
 MxDb.Version=DB.6.0.80
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -97,6 +99,11 @@ PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC6.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PC6.GPIO_Label=LCD Botton
+PC6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PC6.Locked=true
+PC6.Signal=GPXTI6
 PCC.Checker=true
 PCC.Line=STM32L151/152
 PCC.MCU=STM32L152RETx
@@ -201,6 +208,8 @@ RCC.VCOOutputFreq_Value=96000000
 RTC.IPParameters=WakeUpCounter-WakeUp
 RTC.IPParametersWithoutCheck=WakeUpCounter-WakeUp
 RTC.WakeUpCounter-WakeUp=SLEEPTIME
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
